<resources>
    <string name="app_name">GameKotlin</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="re_password">Re-password</string>
    <string name="country">Country</string>
    <string name="birthdate">BirthDate</string>
    <string name="save">Save</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="remember_me">Remember Me?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Please_enter">Please Enter UserName/Password</string>


    <string-array name="countries_array">
        <item>Country</item>
        <item>Palestinian</item>
        <item>Turks</item>
        <item>Ugandans</item>
        <item>Zambians</item>
        <item>Uzbeks</item>
        <item>Welsh</item>
        <item>Venezuelans</item>
        <item>Vincentians</item>
        <item>Uruguayans</item>
    </string-array>


    <string name="invalid_name">Please enter user name</string>
    <string name="invalid_full_name">Please enter full name</string>
    <string name="invalid_email">Please enter email address</string>
    <string name="invalid_email2">Please enter valid email address</string>
    <string name="invalid_gender">Please enter gender</string>
    <string name="invalid_birthday">Please enter birthday</string>
    <string name="invalid_country">Please enter country Name</string>
    <string name="email_already_exist">Email already exist. Enter new email.</string>

    <string name="invalid_mobile">Please enter valid mobile</string>
    <string name="validmobile">Please enter valid mobile number</string>
    <string name="invalid_confirm_password">Please enter confirm password</string>
    <string name="password_should_be_same">Password should be same</string>
    <string name="the_new_password">The new password is the same as the old one</string>
    <string name="the_old_password">The old password is incorrect</string>
    <string name="invalid_password_length">Check Password</string>
    <string name="invalid_password"> Enter Password.</string>
    <string name="pleae_enter_all">Please Enter all Data</string>
    <string name="score">Score</string>
    <string name="select_your_country">Select your Country!</string>
    <string name="show_all_games">Show all Games</string>
    <string name="show_last_game_date">Show last Game Date</string>
    <string name="change_password">Change Password</string>
    <string name="clear_game_history">Clear game history</string>
    <string name="welcome">Welcome ..</string>
    <string name="enter_number">Enter Number</string>
    <string name="check">Check</string>
    <string name="new_game">New Game</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_your_new_password">Confirm Your New Password</string>
    <string name="save_edits">Save Edits</string>
    <string name="_please_fill_data">Please fill All Data</string>
    <string name="_please_check_your">Please check your username </string>
    <string name="check_gender">Pleas check gender</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="password_change_failed">Failed to change password, try again!</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong.Try again!</string>
    <string name="you_haven_t_played_any_games_yet">You haven\'t played \n any games yet !</string>
    <string name="history_del">History Cleared Successfully</string>
    <string name="history_is">History is empty!</string>
    <string name="no_games_played">No Games played yet!</string>
    <string name="password_length">Password Length must be at least 6 !!</string>
    <string name="please_check">Please Check Your userName/Password !!</string>
    <string name="please_enter_number_to_paly">Please Enter Number to Start Play</string>
    <string name="no">No Data</string>


</resources>