<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="unifedideas.ama.gamekotlin.features.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".features.settings.SettingsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_16dp"
            android:background="@drawable/bg_rectangle_fill_white_stroke_16"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

            <ImageView
                android:id="@+id/login_logo_img"
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_120dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_circle_fill_red"
                android:contentDescription="@string/app_name"
                android:padding="25dp"
                app:layout_constraintBottom_toTopOf="@+id/appName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/logo"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:padding="@dimen/_5dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/setting_show_all_game_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_logo_img" />

            <Button
                android:id="@+id/setting_show_all_game_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/_30dp"
                android:background="@drawable/bg_rectangle_fill_red_top_left_25"
                android:onClick="@{()->viewModel.onClickShowAllGames()}"
                android:text="@string/show_all_games"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/setting_show_last_game_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appName"
                app:layout_constraintVertical_chainStyle="packed" />


            <Button
                android:id="@+id/setting_show_last_game_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/bg_rectangle_fill_red_top_left_25"
                android:onClick="@{()->viewModel.onClickShowLaseGameDate()}"
                android:text="@string/show_last_game_date"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/setting_change_pass_btn"
                app:layout_constraintEnd_toEndOf="@+id/setting_show_all_game_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/setting_show_all_game_btn"
                app:layout_constraintTop_toBottomOf="@+id/setting_show_all_game_btn" />


            <Button
                android:id="@+id/setting_change_pass_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/bg_rectangle_fill_red_top_left_25"
                android:onClick="@{()->viewModel.onClickChangePassword()}"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/setting_clear_history_game_btn"
                app:layout_constraintEnd_toEndOf="@+id/setting_show_last_game_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/setting_show_last_game_btn"
                app:layout_constraintTop_toBottomOf="@+id/setting_show_last_game_btn" />

            <Button
                android:id="@+id/setting_clear_history_game_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/bg_rectangle_fill_red_top_left_25"
                android:onClick="@{()->viewModel.onClickClearGameHistory()}"
                android:text="@string/clear_game_history"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/setting_change_pass_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/setting_change_pass_btn"
                app:layout_constraintTop_toBottomOf="@+id/setting_change_pass_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>